2A/05_Projet_GL/src/test/deca/context/invalid/complet/72_aff_bool_classe.deca
// Description :
//  affectation du object dans class   
// Resultats :
//    ligne 11 : le Object ne peut pas être affecté à A
// Historique : 
//  cree le 16/01/2024


class A {

}

{
    A a ;
    Object o ;
    a = o ; 
}
